# hexlet-git

./: .bashrc.swp  second_script.py
first_project/: pyproject.toml
